--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     </div>
                     <!----><!---->
                     <div _ngcontent-tac-c39="" class="copyright">
-                        <span _ngcontent-tac-c39="" id="copyrightTextSpan" class="ng-star-inserted">©2021 AT&amp;T Intellectual Property. All rights reserved.</span>
+                        <span _ngcontent-tac-c39="" id="copyrightTextSpan" class="ng-star-inserted">Â©2021 AT&amp;T Intellectual Property. All rights reserved.</span>
                         <!---->
                     </div>
                 </app-footer>
